packages/platformos-mcp-supervisor/test/fixtures/broken-project/app/views/partials/errors/bad_images.liquid
{% doc %}
  @param src {string} Image source
{% enddoc %}
<img src="{{ src }}">
<img src="{{ src }}" loading="lazy">
<img src="{{ src }}" width="300" height="200">
